--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
+    "@reduxjs/toolkit": "^2.2.3",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
@@ -20,10 +21,12 @@
     "react-dom": "^18.2.0",
     "react-native": "0.73.6",
     "react-native-date-ranges": "^2.5.0",
+    "react-native-maps": "^1.12.0",
     "react-native-modals": "^0.22.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "^0.19.10"
+    "react-native-web": "^0.19.10",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
