--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.1.3",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/bottom-tabs": "^6.5.16",
+    "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "expo": "~50.0.14",
+    "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-aria-components": "^1.1.0",
     "react-dom": "^18.2.0",
@@ -23,8 +28,10 @@
     "react-native-date-ranges": "^2.5.0",
     "react-native-maps": "^1.12.0",
     "react-native-modals": "^0.22.3",
+    "react-native-pager-view": "6.2.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-web": "^0.19.10",
     "react-redux": "^9.1.0"
   },
