--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-pager-view": "6.2.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "^0.19.10",
     "react-redux": "^9.1.0"
