--- a/package.json
+++ b/package.json
@@ -9,28 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "^3.1.3",
-    "@react-native-community/datetimepicker": "7.6.1",
+    "@expo/metro-runtime": "~3.2.1",
+    "@react-native-community/datetimepicker": "7.7.0",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
-    "expo": "~50.0.14",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-status-bar": "~1.11.1",
+    "expo": "51",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-status-bar": "~1.12.1",
     "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-aria-components": "^1.1.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-date-ranges": "^2.5.0",
-    "react-native-maps": "^1.12.0",
+    "react-native-maps": "1.14.0",
     "react-native-modals": "^0.22.3",
-    "react-native-pager-view": "6.2.3",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-pager-view": "6.3.0",
+    "react-native-reanimated": "3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "^0.19.10",
